@@ -1,0 +1,56 @@
+.subscriptions-usage__list {
+	padding: 0;
+
+	.subscriptions-usage__list-item {
+		display: flex;
+		align-items: center;
+		padding: 8px 0;
+
+		.subscriptions-usage__list-item-carrier-icon {
+			width: 48px;
+			padding-left: 16px;
+
+			@include breakpoint( '>480px' ) {
+				padding-left: 24px;
+			}
+		}
+
+		.subscriptions-usage__list-item-name {
+			width: 35%;
+		}
+
+		.subscriptions-usage__list-item-usage {
+			width: 30%;
+		}
+
+		.subscriptions-usage__list-item-actions {
+			width: 25%;
+			text-align: right;
+			padding-right: 16px;
+
+			@include breakpoint( '>480px' ) {
+				padding-right: 24px;
+			}
+		}
+	}
+}
+
+.subscriptions-usage__header {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	font-weight: 600;
+	padding: 12px 0;
+	font-size: 14px;
+	border-top: 0;
+	border-bottom: 1px solid var( --color-neutral-0 );
+	border-bottom-color: var( --color-neutral-100 );
+	background: var( --color-neutral-0 );
+
+	.subscriptions-usage__header-icon {
+		width: 72px;
+	}
+	.subscriptions-usage__header-name {
+		width: 35%;
+	}
+}
