@@ -339,6 +339,10 @@ if ( ! class_exists( 'WC_Connect_Loader' ) ) {
 			$this->rest_carriers_controller = $rest_carriers_controller;
 		}
 
+		public function set_rest_subscriptions_controller( WC_REST_Connect_Subscriptions_Controller $rest_subscriptions_controller ) {
+			$this->rest_subscriptions_controller = $rest_subscriptions_controller;
+		}
+
 		public function set_rest_carrier_controller( WC_REST_Connect_Shipping_Carrier_Controller $rest_carrier_controller ) {
 			$this->rest_carrier_controller = $rest_carrier_controller;
 		}
@@ -877,6 +881,11 @@ if ( ! class_exists( 'WC_Connect_Loader' ) ) {
 			$rest_carriers_controller = new WC_REST_Connect_Shipping_Carriers_Controller( $this->api_client, $settings_store, $logger );
 			$this->set_rest_carriers_controller( $rest_carriers_controller );
 			$rest_carriers_controller->register_routes();
+
+			require_once( plugin_basename( 'classes/class-wc-rest-connect-subscriptions-controller.php' ) );
+			$rest_subscriptions_controller = new WC_REST_Connect_Subscriptions_Controller( $this->api_client, $settings_store, $logger );
+			$this->set_rest_subscriptions_controller( $rest_subscriptions_controller );
+			$rest_subscriptions_controller->register_routes();
 
 			require_once( plugin_basename( 'classes/class-wc-rest-connect-shipping-carrier-delete-controller.php' ) );
 			$rest_carrier_delete_controller = new WC_REST_Connect_Shipping_Carrier_Delete_Controller( $this->api_client, $settings_store, $logger );
