@@ -2,6 +2,7 @@
 
 = 1.25.5 - 202x-xx-xx =
 * Fix	- Redux DevTools usage update.
+* Add	- Display subscriptions usage.
 
 = 1.25.4 - 2020-12-08 =
 * Tweak - Remove Stripe connect functionality.
